@@ -36,6 +36,7 @@ import com.softwaremagico.tm.random.exceptions.InvalidRandomElementSelectedExcep
 
 import java.util.Collection;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class RandomSkillBonusOption extends RandomSkill {
 
@@ -49,7 +50,7 @@ public class RandomSkillBonusOption extends RandomSkill {
 
     @Override
     protected Collection<Skill> getAllElements() throws InvalidXmlElementException {
-        return skillOptions.getOptions().stream().map(Option::getElement).toList();
+        return skillOptions.getOptions().stream().map(Option::getElement).collect(Collectors.toList());
     }
 
 
